# SuperFarmer

./: .gitignore  CMakeLists.txt  README.md
SuperFarmer/: CMakeLists.txt  main.cpp
SuperFarmer/src/: Animal.hpp  Bank.cpp  Bank.hpp  CMakeLists.txt  Dice.cpp  Dice.hpp  Gamestate.cpp  Gamestate.hpp  Player.cpp  Player.hpp  bar.cpp  bar.hpp
test/ut/: BankPlayerTest.cpp  BankTests.cpp  CMakeLists.txt  DiceTests.cpp  GamestateTests.cpp  PlayerTests.cpp
